Bug 159824 - FILESAVE ODF->RTF: axial gradients become 2-color linear
Summary: FILESAVE ODF->RTF: axial gradients become 2-color linear
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Justin L
URL:
Whiteboard: target:24.8.0 target:24.2.2
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks: Object-Fill-Gradient
  Show dependency treegraph
 
Reported: 2024-02-21 16:32 UTC by Justin L
Modified: 2024-02-23 19:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
axialFill.odt: white - green - white radial gradient becomes white - green (11.55 KB, application/vnd.oasis.opendocument.text)
2024-02-21 16:32 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2024-02-21 16:32:16 UTC
Created attachment 192691 [details]
axialFill.odt: white - green - white radial gradient becomes white - green

Starting in LO 7.6, exporting a LO defined axial gradient resulted in a two color linear gradient, due to
commit bb198176684c3d9377e26c04a29ec66deb811949
Author: Armin Le Grand (allotropia) on Fri Apr 21 15:18:09 2023 +0200
    MCGR: Make MCGR default for oox im/export, cleanup
Comment 1 Commit Notification 2024-02-23 10:01:32 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9ba68c769d41d1075152a22bf37e78fb9320317b

tdf#159824 MCGR rtf export: don't lose gradient's axial-ness

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2024-02-23 16:41:28 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/bb207d7816c2d32d02ee11ff784d405d2bb5de0f

tdf#159824 MCGR rtf export: don't lose gradient's axial-ness

It will be available in 24.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-02-23 19:28:47 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/695f8fb19d839efe03a402d2a7e7ef73b6d8f436

related tdf#159824 RTF import/export gradient angle

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-02-23 19:28:51 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6dd6891a3deed8718bf2b0fcf564f229f676f8ba

related tdf#126533 tdf#159824 VML: don't export: negative angles

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.